fix some MovieCards from stretching to full screen height on mobile

--- a/src/Pages/ResultsPage/results-page.css
+++ b/src/Pages/ResultsPage/results-page.css
@@ -43,6 +43,7 @@
   grid-template-columns: repeat(auto-fill, 120px);
   justify-content: space-between;
   row-gap: 1rem;
+  height: fit-content;
 
   margin-top: 1rem;
   margin-bottom: 2rem;
